--- a/trials.ipynb
+++ b/trials.ipynb
@@ -476,7 +476,7 @@
     "from langchain.chat_models import ChatOpenAI\n",
     "llm = ChatOpenAI(\n",
     "    openai_api_base=\"https://openrouter.ai/api/v1\",\n",
-    "    openai_api_key=\"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\",\n",
+    "    openai_api_key=\"\",\n",
     "    model_name=\"deepseek/deepseek-r1-distill-llama-70b:free\",\n",
     "    temperature=0.7\n",
     ")"
